--- a/0915.ipynb
+++ b/0915.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzruhu57H5C3M9s9xGNVSs",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPJ/KhtJ5HvGjsC/0esp5ov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +29,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "oExy2ox6-qYB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oExy2ox6-qYB",
+        "outputId": "a6fc884e-5e7a-400f-ad84-4b06d124ab2a"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hi\")"
+      ]
     },
     {
       "cell_type": "code",
